[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
mob_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0.105882, 0.262745, 0.32549, 1 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpanLocation" type="PathFollow2D" parent="MobPath"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 333 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
